--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.aarthificial.reanimation": "https://github.com/aarthificial/reanimation.git",
+    "com.unity.cinemachine": "2.10.3",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.11.2",
